<?xml version="1.0"?>
<package format="2">
  <name>rover_arm</name>
  <version>0.0.1</version>
  <description>Arm homing and safety.</description>
  <maintainer email="user@todo.todo">Toolbox Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rover_msgs</depend>
</package>
