<?xml version="1.0"?>
<package format="2">
  <name>rover_arm_traj</name>
  <version>0.0.1</version>
  <description>FollowJointTrajectory action server to ArmCmd.</description>
  <maintainer email="user@todo.todo">Toolbox Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rover_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
