<?xml version="1.0"?>
<package format="2">
  <name>rover_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro and ros_control configs.</description>
  <maintainer email="user@todo.todo">Toolbox Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>gazebo_ros_control</depend>
</package>
