<?xml version="1.0"?>
<package format="2">
  <name>rover_hardware</name>
  <version>0.0.1</version>
  <description>ros_control RobotHW for real rover.</description>
  <maintainer email="user@todo.todo">Toolbox Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>rover_msgs</depend>
</package>
