<?xml version="1.0"?>
<package format="2">
  <name>rover_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for Toolbox Rover.</description>
  <maintainer email="user@todo.todo">Toolbox Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
