<?xml version="1.0"?>
<package format="2">
  <name>rover_sim</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for Toolbox Rover.</description>
  <maintainer email="user@todo.todo">Toolbox Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>rover_base</depend>
  <depend>rover_msgs</depend>
</package>
