<?xml version="1.0"?>
<package format="2">
  <name>toolbox_rover_moveit</name>
  <version>0.0.1</version>
  <description>MoveIt configuration for Toolbox Rover arm.</description>
  <maintainer email="user@todo.todo">Toolbox Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
